blog manage system

--- a/admin/assets/style/app.styl
+++ b/admin/assets/style/app.styl
@@ -1,2 +1,6 @@
 // Import Vuetify styling
 @require '~vuetify/src/stylus/main.styl'
+
+// @media only screen and (max-width: 600px)
+//     .container 
+//         padding: 8px
