--- a/app/assets/style/app.styl
+++ b/app/assets/style/app.styl
@@ -8,7 +8,7 @@
 .article-content
     font-size: 21px;
     p 
-        margin-top: 6px;
+        margin-top: 29px;
         --x-height-multiplier: 0.375;
         --baseline-multiplier: 0.17;
         letter-spacing: .01rem;
@@ -19,10 +19,11 @@
         letter-spacing: -.003em;
     h1,h2,h3
         margin-top: 39px
-    code
-        width: 100%
-        background: none
-        padding: 1rem
+    pre 
+        code
+            width: 100%
+            background: none
+            padding: 1rem
     blockquote
         display: block;
         margin-block-start: 1em;
