--- a/app/assets/style/app.styl
+++ b/app/assets/style/app.styl
@@ -66,8 +66,12 @@ code:after, kbd:after, code:before, kbd:before{
         line-height: 1.22;
         letter-spacing: -.012em;
         margin-top: 31px;
-
-        
+    a
+        // font-weight: 600;
+        background-image: linear-gradient(to right,currentColor 100%,currentColor 0);
+        background-size: 1px 1px;
+        background-position: 0 calc(1em + 1px);
+        background-repeat: repeat-x;
     pre 
         code
             width: 100%
